5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1577_1332.log
== TEST (2019-03-14 19:28:39) 
-- CODE:
aresta =5
area = 3/2*(3**2)**0,5
 
print(round(3/2*(3**2)**0,5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(3/2*(3**2)**0,5, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:29:14) 
-- CODE:
aresta =5
area = 3/2*(3**2)**0,5
 
print(round(3/2*(3*5**2)**0,5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(3/2*(3*5**2)**0,5, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:29:55) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0,5
 
print(round(3/2*(3*5**2)**0,5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(3/2*(3*5**2)**0,5, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:04) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0,5
print(round(3/2*(3*5**2)**0,5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(3/2*(3*5**2)**0,5, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:41) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0.5

print(round(3/2*(3*5**2)**0,5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(3/2*(3*5**2)**0,5, 4))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:30:50) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0.5

print(round(3/2*(3*5**2)**0.5, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:31:19) 
-- CODE:
aresta =5
area = 3/2*(3*5**2)**0.5

print(round(3/2*(3*5**2)**0.5, 4))
-- EXECUTION TIME:
0.150671
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:32:43) 
-- CODE:
aresta =5
area = 3/2*(3*6**2)**0.5

print(round(3/2*(3*6**2)**0.5, 4))
-- OUTPUT:
15.5885
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:32:45) 
-- CODE:
aresta =5
area = 3/2*(3*6**2)**0.5

print(round(3/2*(3*6**2)**0.5, 4))
-- EXECUTION TIME:
0.192786
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
15.5885
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:36:39) 
-- CODE:


print(round(3/2*(3*6**2)**0.5, 4))
-- OUTPUT:
15.5885
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:36:43) 
-- CODE:


print(round(3/2*(3*6**2)**0.5, 4))
-- EXECUTION TIME:
0.14063
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
15.5885
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:31:42) 
-- CODE:
print(round(3/2*(3)**0,5*5**2,4)
-- ERROR:
File "XXXX", line 2
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:32:40) 
-- CODE:
print(round(3/2*((3)**0,5)*5**2,4)
-- ERROR:
File "XXXX", line 2
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:32:49) 
-- CODE:
print(round(3/2*((3)**0,5)*5**2,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(3/2*((3)**0,5)*5**2,4))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:33:18) 
-- CODE:
print(round(3/2*(3)**0,5*5**2, 4)
-- ERROR:
File "XXXX", line 2
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:33:45) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4)
-- ERROR:
File "XXXX", line 2
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 10:34:25) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 10:34:43) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.189496
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
